--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/BusinessEntity/Views/TestPage.html
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/BusinessEntity/Views/TestPage.html
@@ -1,3 +1,24 @@
 ﻿<div ng-controller="BusinessEntity_TestPageController">
-    {{testModel}}
+
+    <form class="form-inline" style="margin-top: 15px;">
+
+        <vr-select label="Manager:" datasource="users" selectedvalues="selectedManager" datatextfield="Name" datavaluefield="UserId"></vr-select>
+
+        <vr-select ismultipleselection label="Users:" datasource="users" selectedvalues="selectedUsers" datatextfield="Name" datavaluefield="UserId"></vr-select>
+
+        <!--<vr-select ismultipleselection datasource="users" selectedvalues="selectedUsers" datatextfield="Name" datavaluefield="UserId" entityname="Users"></vr-select>-->
+
+        <button type="button" class="btn btn-default" ng-click="apply()">Apply</button>
+        <button type="button" class="btn btn-default" ng-click="test()">Test</button>
+
+    </form>
+
+    <div data-angular-treeview="true"
+         data-tree-id="tree"
+         data-tree-model="roleList"
+         data-node-id="roleId"
+         data-node-label="roleName"
+         data-node-children="children">
+    </div>
+    
 </div>
