Add new css class vr-control-label to label directive
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24552

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -1372,3 +1372,7 @@ input.ui-grid-filter-input[type="text"] {
     padding: 2px 12px !important;
 }
 
+.vr-control-label {
+    font-weight:bold;
+    font-size:smaller;
+}
