Validation Billing Report
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24564

--- a/TOneV2/Code/TOneV2/TOne.Web/Reports/Analytics/rdlCustomerSummary.rdlc
+++ b/TOneV2/Code/TOneV2/TOne.Web/Reports/Analytics/rdlCustomerSummary.rdlc
@@ -364,14 +364,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="Carrier">
+                    <Textbox Name="Customer">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!Carrier.Value</Value>
+                              <Value>=Fields!Customer.Value</Value>
                               <Style>
                                 <FontSize>8pt</FontSize>
                               </Style>
@@ -380,7 +380,7 @@
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>Carrier</rd:DefaultName>
+                      <rd:DefaultName>Customer</rd:DefaultName>
                       <ZIndex>6</ZIndex>
                       <Style>
                         <BackgroundColor>=IIf(RowNumber(Nothing) Mod 2, "Gainsboro", "White")</BackgroundColor>
