--- a/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
@@ -2,39 +2,39 @@
     <vr-form name="formFilter">
         <vr-row>
             <vr-columns width="1/2row">
-                <vr-section title="Top Customers (More Details)" ng-if="scopeModel.showCharts">
+                <vr-section title="Top Customers" ng-if="scopeModel.showCharts">
                     <vr-row>
                         <vr-columns width="1/2row">
-                            <vr-chart on-ready="scopeModel.customerChartReady"></vr-chart>
+                                <vr-chart on-ready="scopeModel.customerChartReady" height="200px"></vr-chart>
                         </vr-columns>
                         <vr-columns width="1/2row">
                             <vr-datagrid on-ready="scopeModel.onGridReady"
                                          datasource="scopeModel.topCustomers">
                                 <vr-datagridcolumn headertext="'Customer Name'" field="'CustomerName'"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'% Connected'" field="'PercConnected'" type="'Number'" numberprecision="2" getcolor="scopeModel.getPercConnectedColor"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'ACD'" field="'ACD'" type="'Number'" numberprecision="2" getcolor="scopeModel.getACDColor"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'Total Dur (M)'" field="'TotalDuration'" type="'Number'" numberprecision="2"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'PDD (S)'" field="'PDDInSec'" type="'Number'" numberprecision="2" getcolor="scopeModel.getPDDColor"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'% Connected'" field="'PercConnected'" type="'Number'" numberprecision="'NoDecimal'" getcolor="scopeModel.getPercConnectedColor"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'ACD'" field="'ACD'" type="'Number'"  getcolor="scopeModel.getACDColor"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'Total Dur (M)'" field="'TotalDuration'" type="'Number'"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'PDD (S)'" field="'PDDInSec'" type="'Number'" getcolor="scopeModel.getPDDColor"></vr-datagridcolumn>
                             </vr-datagrid>
                         </vr-columns>
                     </vr-row>
                 </vr-section>
             </vr-columns>
             <vr-columns width="1/2row">
-                <vr-section title="Top Suppliers (More Details)" ng-if="scopeModel.showCharts">
+                <vr-section title="Top Suppliers" ng-if="scopeModel.showCharts">
                     <vr-row>
                         <vr-columns width="1/2row">
-                            <vr-chart on-ready="scopeModel.supplierChartReady"></vr-chart>
+                            <vr-chart on-ready="scopeModel.supplierChartReady" height="200px"></vr-chart>
 
                         </vr-columns>
                         <vr-columns width="1/2row">
                             <vr-datagrid on-ready="scopeModel.onGridReady"
                                          datasource="scopeModel.topSuppliers">
                                 <vr-datagridcolumn headertext="'Supplier Name'" field="'SupplierName'"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'% Connected'" field="'PercConnected'" type="'Number'" numberprecision="2" getcolor="scopeModel.getPercConnectedColor"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'ACD'" field="'ACD'" type="'Number'" numberprecision="2" getcolor="scopeModel.getColor"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'Total Dur (M)'" field="'TotalDuration'" type="'Number'" numberprecision="2"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'PDD (S)'" field="'PDDInSec'" type="'Number'" numberprecision="2" getcolor="scopeModel.getPDDColor"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'% Connected'" field="'PercConnected'" type="'Number'" numberprecision="'NoDecimal'" getcolor="scopeModel.getPercConnectedColor"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'ACD'" field="'ACD'" type="'Number'" getcolor="scopeModel.getColor"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'Total Dur (M)'" field="'TotalDuration'" type="'Number'" ></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'PDD (S)'" field="'PDDInSec'" type="'Number'" getcolor="scopeModel.getPDDColor"></vr-datagridcolumn>
                             </vr-datagrid>
                         </vr-columns>
                     </vr-row>
@@ -44,24 +44,58 @@
           
         </vr-row>
         <vr-row>
-            <vr-columns width="1/3row">
+            <vr-columns colnum="5">
                 <vr-section title="Last Dist." ng-if="scopeModel.showCharts">
-                    <vr-chart on-ready="scopeModel.lastDistributionChartReady"></vr-chart>
+                    <vr-chart on-ready="scopeModel.lastDistributionChartReady" height="200px"></vr-chart>
                 </vr-section>
             </vr-columns>
-            <vr-columns width="1/3row">
+            <vr-columns colnum="5">
                 <vr-section title="Top Destinations" ng-if="scopeModel.showCharts">
-                    <vr-chart on-ready="scopeModel.destinationChartReady"></vr-chart>
+                    <vr-chart on-ready="scopeModel.destinationChartReady" height="200px"></vr-chart>
                 </vr-section>
             </vr-columns>
-            <vr-columns width="1/3row">
-                <vr-section title="Top Destinations" ng-if="scopeModel.showCharts">
-                    <vr-gauge-chart on-ready="scopeModel.guageChartReady"></vr-gauge-chart>
+            <vr-columns colnum="2">
+                <vr-section title="OverAll" ng-if="scopeModel.showCharts">
+                   <vr-row>
+                       <vr-columns width="fullrow" ng-show="scopeModel.pDDInSec != undefined">
+                           <vr-label>PDD (s)</vr-label>
+                           </br>
+                           <vr-label>{{scopeModel.pDDInSec}}</vr-label>
+                       </vr-columns>
+                       <vr-columns width="fullrow" ng-show="scopeModel.totalDuration != undefined">
+                           <vr-label> Total Duration (m) </vr-label>
+                           </br>
+                           <vr-label>{{scopeModel.totalDuration}}</vr-label>
+                       </vr-columns>
+                   </vr-row>
                 </vr-section>
             </vr-columns>
-            <vr-columns width="1/3row">
+        </vr-row>
+        <vr-row>
+            <vr-columns colnum="6" >
                 <vr-section title="Top Destinations" ng-if="scopeModel.showCharts">
-                    <vr-solidgauge-chart on-ready="scopeModel.solidguageChartReady"></vr-solidgauge-chart>
+                    <vr-row>
+                        <vr-columns colnum="5">
+                            <vr-solidgauge-chart on-ready="scopeModel.guageChartReady" height="200px"></vr-solidgauge-chart>
+                        </vr-columns>
+                        <vr-columns colnum="7">
+                            <vr-chart on-ready="scopeModel.liveChartReady" height="200px"></vr-chart>
+                        </vr-columns>
+                    </vr-row>
+                  
+                </vr-section>
+            </vr-columns>
+            <vr-columns colnum="6">
+                <vr-section title="Top ACD" ng-if="scopeModel.showCharts">
+                    <vr-row>
+                        <vr-columns colnum="5">
+                            <vr-solidgauge-chart on-ready="scopeModel.acdGuageChartReady" height="200px"></vr-solidgauge-chart>
+                        </vr-columns>
+                        <vr-columns colnum="7">
+                            <vr-chart on-ready="scopeModel.acdLiveChartReady" height="200px"></vr-chart>
+                        </vr-columns>
+                    </vr-row>
+
                 </vr-section>
             </vr-columns>
         </vr-row>
