--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -3048,3 +3048,42 @@ vr-validator[vr-input] > div:nth-child(1){
     opacity: 0.5;
 }
 /* end vr-dropdown-section*/
+
+/* start vr-overall-widget*/
+
+vr-overall-widget .list-custom {
+    padding: 0px !important;
+}
+
+vr-overall-widget  .list-group-item {    
+    border: 0px solid #dddddd;
+}
+.overallwidget {
+    height:100px;
+    background: -webkit-linear-gradient(bottom,#BCBCBC,#4377c5);
+    background: -o-linear-gradient(bottom,#BCBCBC, #4377c5);
+    background: -moz-linear-gradient(bottom,#BCBCBC,#4377c5);
+    background: linear-gradient(to bottom, #e0e0e0, #4377c5);    
+    text-align:center;
+    color:#fff;
+    font-weight:bold;
+   
+}
+.overallwidget-value{
+    height:75px;
+    font-size:35px;
+     position:relative;
+}
+.widget-center-text {
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.overallwidget-label{    
+    position:relative;
+    height:25px;
+    font-size:15px;
+}
+/* end vr-overall-widget*/
+
