--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -3060,7 +3060,7 @@ vr-overall-widget  .list-group-item {
 }
 .overallwidget {
     height:100px;
-    background-color: #4377c5;    
+    background-color: #7CB5EC;    
     text-align:center;
     color:#fff;
     font-weight:bold;
