add    border-radius for overallwidget
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39722

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -3064,7 +3064,7 @@ vr-overall-widget  .list-group-item {
     text-align:center;
     color:#fff;
     font-weight:bold;
-   
+    border-radius: 4px;
 }
 .overallwidget-value{
     height:75px;
