--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleRate/History/Template/CustomerZoneRateHistoryGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleRate/History/Template/CustomerZoneRateHistoryGridTemplate.html
@@ -1,9 +1,17 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<vr-datagrid on-ready="scopeModel.onGridReady"
+             dataretrievalfunction="scopeModel.dataRetrievalFunction"
+             datasource="scopeModel.records"
+             defaultsortbyfieldname="'Entity.BED'"
+             defaultsortdirection="'DESC'"
+             pagingtype="'PagingOnScroll'"
+             hidegridmenu>
+    <vr-datagridcolumn headertext="'Rate'" field="'Entity.Rate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="10"></vr-datagridcolumn>
+    <vr-datagridcolumn widthfactor="10"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Change Type'" widthfactor="10">
+        <vr-icon icontype="dataItem.iconType" iconurl="dataItem.iconUrl"></vr-icon>
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Currency'" field="'CurrencySymbol'" type="'Text'" widthfactor="10"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Date'" widthfactor="20"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'EED'" field="'Entity.EED'" type="'Date'" widthfactor="20"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Selling Product'" field="'SellingProductName'" type="'Text'" widthfactor="20"></vr-datagridcolumn>
+</vr-datagrid>
