Prevented the user from opening the Zone Info page of Zones of new Countries
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39742

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
@@ -21,7 +21,11 @@
                              isdynamicrowstyle="true">
 
                     <vr-datagridcolumn headertext="'Zone'" type="'Text'" widthfactor="19" disablesorting="true">
-                        <vr-label isvalue="true" ellipsis><a href="" ng-click="viewScope.onZoneNameClicked(dataItem)" title="{{dataItem.ZoneName}}">{{dataItem.ZoneName}}</a></vr-label><span ng-if="dataItem.IsFutureZone">*</span>
+                        <vr-label isvalue="true" ellipsis>
+                            <a ng-if="dataItem.IsCountryNew === false" href="" ng-click="viewScope.onZoneNameClicked(dataItem)" title="{{dataItem.ZoneName}}">{{dataItem.ZoneName}}</a>
+                            <span ng-if="dataItem.IsCountryNew === true">{{dataItem.ZoneName}}</span>
+                            <span ng-if="dataItem.IsFutureZone">*</span>
+                        </vr-label>
                     </vr-datagridcolumn>
 
                     <vr-datagridcolumn headertext="'Product'"
