--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SellingNumberPlan/Templates/SellingNumberPlanGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SellingNumberPlan/Templates/SellingNumberPlanGridTemplate.html
@@ -3,7 +3,7 @@
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
-             idfield="Entity.SellingNumberPlanId">
+             idfield="Entity.SellingNumberPlanId" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'ID'" field="'Entity.SellingNumberPlanId'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
