--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SellingProduct/Templates/SellingProductGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SellingProduct/Templates/SellingProductGridTemplate.html
@@ -1,14 +1,14 @@
 ﻿
 <vr-datagrid datasource="sellingProducts"
-    dataretrievalfunction="dataRetrievalFunction"
-    pagingtype="'PagingOnScroll'"
-    on-ready="gridReady"
-    menuactions="gridMenuActions"
-    idfield="Entity.SellingProductId">
+             dataretrievalfunction="dataRetrievalFunction"
+             pagingtype="'PagingOnScroll'"
+             on-ready="gridReady"
+             menuactions="gridMenuActions"
+             idfield="Entity.SellingProductId" enableautoexport="true">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.SellingProductId'" widthfactor="2"></vr-datagridcolumn>
-<vr-datagridcolumn headertext="'Description'" field="'Entity.Name'"></vr-datagridcolumn>
-<vr-datagridcolumn headertext="'Selling Number Plan'" field="'SellingNumberPlanName'"></vr-datagridcolumn>
-<vr-datagridexpandablerow>
-<vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
-</vr-datagridexpandablerow>
+    <vr-datagridcolumn headertext="'Description'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Selling Number Plan'" field="'SellingNumberPlanName'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
