--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Switch/Templates/SwitchGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Switch/Templates/SwitchGridTemplate.html
@@ -1,9 +1,9 @@
 ﻿<vr-datagrid datasource="switches"
-                on-ready="onGridReady"
-                dataretrievalfunction="dataRetrievalFunction"
-                pagingtype="'PagingOnScroll'"
-                menuactions="gridMenuActions"
-                idfield="Entity.SwitchId">
+             on-ready="onGridReady"
+             dataretrievalfunction="dataRetrievalFunction"
+             pagingtype="'PagingOnScroll'"
+             menuactions="gridMenuActions"
+             idfield="Entity.SwitchId" enableautoexport="true">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.SwitchId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Switch Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
 </vr-datagrid>
