--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -1533,6 +1533,23 @@ loader .outer-loader {
 .panel-vr-child .section-menu{ 
     top:14px
 }
+/* panel-vr-child light */
+
+.panel-vr.panel-vr-child.light > .panel-body {
+    border: 1px solid #ddd !important;    
+    border-top: 0px !important;
+    padding: 5px;
+    margin: 0px;
+}
+
+.panel-vr.panel-vr-child.light > .panel-heading {  
+    border-color: #ddd;
+}
+.panel-vr.panel-vr-child.light > .panel-heading label {  
+    padding: 0px 5px 0px 10px;
+    left: 5px;
+}
+/* panel-vr-child */
 .section-menu vr-button span{ 
    font-size:11px !important;
    font-weight: normal;
