--- a/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
@@ -2,40 +2,29 @@
     <vr-form name="formFilter">
         <vr-row removeline>
             <vr-columns colnum="6">
-                <vr-section title="Connected / Attempts" ng-if="scopeModel.showCharts" level="2" light  >
+                <vr-section title="Connected / Attempts" ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
-                       
-                           <div style="width: 120px; display: inline-block">
-                        
-                                <vr-overall-widget datasource="scopeModel.overAllResult" maxitemperrow="1"></vr-overall-widget>
-                           
-
-                              </div>
-        <div style="width: calc(99% - 120px); display: inline-block; ">
-            
-                                <vr-customgauge-chart on-ready="scopeModel.guageChartReady" height="200px" hideexporticon="true" hidesettings="true"></vr-customgauge-chart>
-                           
-                                </div>
-
-                          
+                        <vr-columns colnum="2" haschildcolumns>
+                            <vr-overall-widget datasource="scopeModel.overAllResult" maxitemperrow="1"></vr-overall-widget>
+                        </vr-columns>
+                        <vr-columns colnum="5">
+                            <vr-customgauge-chart on-ready="scopeModel.guageChartReady" height="200px" hideexporticon="true" hidesettings="true"></vr-customgauge-chart>
+                        </vr-columns>
                         <vr-columns colnum="5">
                             <vr-chart on-ready="scopeModel.liveChartReady" height="200px" hideexporticon="true" hidesettings="true"></vr-chart>
                         </vr-columns>
                     </vr-row>
-
                 </vr-section>
             </vr-columns>
-            
+
             <vr-columns colnum="6">
-                <vr-section title="ACD" ng-if="scopeModel.showCharts" level="2" light >
+                <vr-section title="ACD" ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
-                        <vr-columns colnum="7">
-                            <div style="width:120px;display:inline-block">
-                                <vr-overall-widget datasource="scopeModel.overAllDuration" maxitemperrow="1"></vr-overall-widget>      
-                            </div>
-                            <div style="width: calc(99% - 120px); display: inline-block; ">
-                                <vr-customgauge-chart on-ready="scopeModel.acdGuageChartReady" height="200px" hideexporticon="true" hidesettings="true"></vr-customgauge-chart>
-                            </div>                                                     
+                        <vr-columns colnum="2" haschildcolumns>
+                            <vr-overall-widget datasource="scopeModel.overAllDuration" maxitemperrow="1"></vr-overall-widget>
+                        </vr-columns>
+                        <vr-columns colnum="5">
+                            <vr-customgauge-chart on-ready="scopeModel.acdGuageChartReady" height="200px" hideexporticon="true" hidesettings="true"></vr-customgauge-chart>
                         </vr-columns>
                         <vr-columns colnum="5">
                             <vr-chart on-ready="scopeModel.acdLiveChartReady" height="200px" hideexporticon="true" hidesettings="true"></vr-chart>
@@ -47,7 +36,7 @@
         </vr-row>
         <vr-row removeline>
             <vr-columns colnum="8">
-                <vr-section title="Top Customers" ng-if="scopeModel.showCharts" level="2" light >
+                <vr-section title="Top Customers" ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
                         <vr-columns colnum="6">
                             <vr-chart on-ready="scopeModel.customerChartReady" height="200px" hideexporticon="true" hidesettings="true"></vr-chart>
@@ -66,7 +55,7 @@
                 </vr-section>
             </vr-columns>
             <vr-columns colnum="4">
-                <vr-section title="Last Dist." ng-if="scopeModel.showCharts" level="2" light >
+                <vr-section title="Last Dist." ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
                         <vr-columns colnum="12">
                             <vr-chart on-ready="scopeModel.lastDistributionChartReady" height="200px" hideexporticon="true" hidesettings="true"></vr-chart>
@@ -78,7 +67,7 @@
         <vr-row removeline>
 
             <vr-columns colnum="8">
-                <vr-section title="Top Suppliers" ng-if="scopeModel.showCharts" level="2" light >
+                <vr-section title="Top Suppliers" ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
                         <vr-columns colnum="6">
                             <vr-chart on-ready="scopeModel.supplierChartReady" height="200px" hideexporticon="true" hidesettings="true"></vr-chart>
@@ -98,7 +87,7 @@
                 </vr-section>
             </vr-columns>
             <vr-columns colnum="4">
-                <vr-section title="Top Destinations" ng-if="scopeModel.showCharts" level="2" light >
+                <vr-section title="Top Destinations" ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
                         <vr-columns colnum="12">
                             <vr-chart on-ready="scopeModel.destinationChartReady" height="200px" hideexporticon="true" hidesettings="true"></vr-chart>
