--- a/Demo.project/Code/Demo.Module.Web/Demo_Module/Views/UserEditor.html
+++ b/Demo.project/Code/Demo.Module.Web/Demo_Module/Views/UserEditor.html
@@ -5,6 +5,12 @@
                 <vr-columns width="1/2row">
                     <vr-textbox value="name" label="Name" isrequired></vr-textbox>
                 </vr-columns>
+                <span vr-disabled="disableCity">
+
+                    <vr-columns width="1/2row" haschildcolumns>
+                        <demo-module-city-selector on-ready="onCityDirectiveReady" isrequired="true" showaddbutton></demo-module-city-selector>
+                    </vr-columns>
+                </span>
             </vr-row>
         </vr-form>
     </vr-modalbody>
