--- a/Demo.project/Code/Demo.Module.Web/Demo_Module/Views/UserManagement.html
+++ b/Demo.project/Code/Demo.Module.Web/Demo_Module/Views/UserManagement.html
@@ -5,6 +5,9 @@
                 <vr-columns width="normal">
                     <vr-textbox value="name" label="Name"></vr-textbox>
                 </vr-columns>
+                <vr-columns width="normal" haschildcolumns>
+                    <demo-module-city-selector on-ready="onCityDirectiveReady" ismultipleselection></demo-module-city-selector>
+                </vr-columns>
             </vr-row>
         </div>
         <vr-row removeline>
