--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListTemplate/Templates/SalePriceListTemplateGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListTemplate/Templates/SalePriceListTemplateGridTemplate.html
@@ -1,8 +1,8 @@
 ﻿<vr-datagrid on-ready="scopeModel.onGridReady"
-			 datasource="scopeModel.salePriceListTemplates"
-			 dataretrievalfunction="scopeModel.dataRetrievalFunction"
-			 menuactions="scopeModel.menuActions"
-			 pagingtype="'PagingOnScroll'"
-			 idfield="Entity.SalePriceListTemplateId">
-	<vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
+             datasource="scopeModel.salePriceListTemplates"
+             dataretrievalfunction="scopeModel.dataRetrievalFunction"
+             menuactions="scopeModel.menuActions"
+             pagingtype="'PagingOnScroll'"
+             idfield="Entity.SalePriceListTemplateId" enableautoexport="true">
+    <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
 </vr-datagrid>
