--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -3064,6 +3064,9 @@ vr-validator[vr-input] > div:nth-child(1){
     background-color: #ddd;
     opacity: 0.5;
 }
+.highcharts-container svg > text {
+    display :none;
+}
 /* end vr-dropdown-section*/
 
 /* start vr-overall-widget*/
