--- a/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
@@ -18,7 +18,7 @@
             </vr-columns>
 
             <vr-columns colnum="6">
-                <vr-section title="ACD" ng-if="scopeModel.showCharts" level="2" light>
+                <vr-section title="Duration" ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
                         <vr-columns colnum="2" haschildcolumns>
                             <vr-overall-widget datasource="scopeModel.overAllDuration" maxitemperrow="1"></vr-overall-widget>
@@ -55,7 +55,7 @@
                 </vr-section>
             </vr-columns>
             <vr-columns colnum="4">
-                <vr-section title="Last Dist." ng-if="scopeModel.showCharts" level="2" light>
+                <vr-section title="Duration Distribution" ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
                         <vr-columns colnum="12">
                             <vr-chart on-ready="scopeModel.lastDistributionChartReady" height="200px" hideexporticon="true" hidesettings="true"></vr-chart>
