--- a/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
@@ -55,7 +55,7 @@
                 </vr-section>
             </vr-columns>
             <vr-columns colnum="4">
-                <vr-section title="Duration Distribution" ng-if="scopeModel.showCharts" level="2" light>
+                <vr-section title="Duration Distribution (min)" ng-if="scopeModel.showCharts" level="2" light>
                     <vr-row>
                         <vr-columns colnum="12">
                             <vr-chart on-ready="scopeModel.lastDistributionChartReady" height="200px" hideexporticon="true" hidesettings="true"></vr-chart>
